@@ -16,6 +16,7 @@ DFHack future
     - gui/guide-path: displays the cached path for minecart Guide orders.
     - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
     - gui/workflow: a front-end for the workflow plugin.
+    - gui/assign-rack: works together with a binary patch to fix weapon racks.
   Workflow plugin:
     - properly considers minecarts assigned to routes busy.
     - code for deducing job outputs rewritten in lua for flexibility.
